// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxAccordionItem customize 1`] = `
<div>
  <details
    class="accordion-item bazinga"
  >
    Test
  </details>
</div>
`;

exports[`loads and displays CxAccordionItem component 1`] = `
<div>
  <details
    class="accordion-item"
  >
    Test
  </details>
</div>
`;
